--- a/docs/fr/modules/main/functions/CheckSTAT.tex
+++ b/docs/fr/modules/main/functions/CheckSTAT.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,10pt]{article}
+\documentclass[a4paper,10pt]{report}
 
 \usepackage[utf8]{inputenc}     % Encodage du texte.
 \usepackage[french]{babel}      % Langue du document.
@@ -14,18 +14,17 @@
 \fontfamily{}
 
 \pagecolor{black}
-\title{\color{red}Introduction à Bash Utils}\color{white}
+\title{\color{red}Fonctions du fichier de librairie \color{lime}CheckSTAT.lib}\color{white}
 \author{Dimitri OBEID}
 \date{2021}
 \pagestyle{fancy}
-\justifying
 
 \pdfinfo{
-  /Title    (Introduction à Bash Utils)
+  /Title    (Fonctions du fichier de librairie CheckSTAT.lib)
   /Author   (Dimitri OBEID)
   /Creator  (Dimitri OBEID)
   /Producer (Dimitri OBEID)
-  /Subject  (Introduction à Bash Utils)
+  /Subject  (Fonctions du fichier de librairie CheckSTAT.lib)
   /Keywords ()
 }
 
@@ -47,9 +46,15 @@
 
 \color{green}
 \subsection{Présentation}\color{white}
-Ce fichier source inclut des fonctions servant à la gestion des valeurs des variables globales de statut : gestions d'erreurs et changement de valeur assité.\\[1\baselineskip]
+
+\begin{justify}
+    Ce fichier source inclut des fonctions servant à la gestion des valeurs des variables globales de statut : gestions d'erreurs et changement de valeur assité.
+\end{justify}
 
 
+% -----------------------
+
+% -----------------------------------------------
 
 \color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
@@ -58,10 +63,12 @@ Ce fichier source inclut des fonctions servant à la gestion des valeurs des var
 
 \color{blue}
 \subsubsection{Chemins de fichiers}\color{white}
+
 \textbf{Nom du fichier :} \textbf{\color{lime}Checkings.lib\color{white}}\\[1\baselineskip]
 \textbf{Dossier parent :} \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{lime}/lib/functions/main\color{white}}\\[1\baselineskip]
 
 
+% -----------------------
 
 \color{lime}\par\noindent\rule{\textwidth}{0.4pt}\color{white}\\[1\baselineskip]
 
@@ -69,6 +76,7 @@ Ce fichier source inclut des fonctions servant à la gestion des valeurs des var
 \textbf{Dossier parent :} \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/modules/main\color{white}}\\[1\baselineskip]
 
 
+% -----------------------
 
 \color{lime}\par\noindent\rule{\textwidth}{0.4pt}\color{white}\\[1\baselineskip]
 
@@ -76,6 +84,7 @@ Ce fichier source inclut des fonctions servant à la gestion des valeurs des var
 \textbf{Dossier parent :} \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/modules/main\color{white}}\\[1\baselineskip]
 
 
+% -----------------------
 
 \color{lime}\par\noindent\rule{\textwidth}{0.4pt}\color{white}\\[1\baselineskip]
 
@@ -83,7 +92,7 @@ Ce fichier source inclut des fonctions servant à la gestion des valeurs des var
 \textbf{Dossier parent :} \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/modules/main\color{white}}\\[1\baselineskip]
 
 
-
+% -----------------------
 
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
@@ -96,6 +105,7 @@ Ce fichier source inclut des fonctions servant à la gestion des valeurs des var
 \textbf{Fichier de définition :} \textbf{\color{lime}Checkings.lib\color{white}}\\[1\baselineskip]
 
 
+% -----------------------
 
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
@@ -103,31 +113,45 @@ Ce fichier source inclut des fonctions servant à la gestion des valeurs des var
 \subsubsection{Variables globales externes et / ou variables d'environnement appelées}\color{white}
 \textbf{Variable :} \textbf{\color{orange}\$\_\_BU\_MAIN\_COLOR...\color{white}}\\[1\baselineskip]
 
-\textbf{Description :} Chacune des variables globales commençant par ce nom retourne un code couleu encodé lors de l'appel d'une de ces variables, grâce à l'appel simultané d'une fonction.\\[1\baselineskip]
+\begin{justify}
+    \textbf{Description :} Chacune des variables globales commençant par ce nom retourne un code couleu encodé lors de l'appel d'une de ces variables, grâce à l'appel simultané d'une fonction.
+\end{justify}
 
 \textbf{Fichier de définition :} \textbf{\color{lime}Colors.conf\color{white}}\\[1\baselineskip]
 
 
+% -----------------------
 
 \color{orange}\par\noindent\rule{\textwidth}{0.4pt}\color{white}\\[1\baselineskip]
 
 \textbf{Variable :} \textbf{\color{orange}\$\_\_BU\_MAIN\_PROJECT\_LOG\_FILE\_PATH\color{white}}\\[1\baselineskip]
 
-\textbf{Description :} Cette variable enregistre le chemin du fichier de logs créé par le script d'initialisation si la valeur de la variable de statut associée est définie à \textbf{\color{gray}true\color{white}}.\\[1\baselineskip]
+\begin{justify}
+    \textbf{Description :} Cette variable enregistre le chemin du fichier de logs créé par le script d'initialisation si la valeur de la variable de statut associée est définie à \textbf{\color{gray}true\color{white}}.
+\end{justify}
 
 \textbf{Fichier de définition :} \\[1\baselineskip]
 
 
+% -----------------------
 
 \color{orange}\par\noindent\rule{\textwidth}{0.4pt}\color{white}\\[1\baselineskip]
 
 \textbf{Variable :} \textbf{\color{orange}\$\_\_BU\_MAIN\_TXT\_CHAR\_HEADER\_LINE\color{white}}\\[1\baselineskip]
 
-\textbf{Description :} Cette variable .\\[1\baselineskip]
+\textbf{Description :}
+\begin{justify}
+    Cette variable .
+\end{justify}
 
 \textbf{Fichier de définition :} \\[1\baselineskip]
 
 
+% -----------------------
+
+% -----------------------------------------------
+
+% /////////////////////////////////////////////////////////////////////////////////////////////// %
 
 \color{red}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
@@ -140,157 +164,187 @@ Ce fichier source inclut des fonctions servant à la gestion des valeurs des var
 \color{blue}
 \subsubsection{ConfEcho}\color{white}
 
-\begin{flushleft}
-	\textbf{Description de la fonction :}\\
-   	Cette fonction retourne un message d'erreur en cas de mauvaise valeur définie dans une variable de statut.\\[1\baselineskip]
+\begin{justify}
+\textbf{Description de la fonction :}\\
+    Cette fonction retourne un message d'erreur en cas de mauvaise valeur définie dans une variable de statut.
+\end{justify}
 
+\begin{justify}
    	Ce message est structuré de la manière suivante :
+
    	\begin{itemize}
-   		\item Le nom du fichier où s'est produite l'erreur, ainsi que la ligne, suivi de la description de l'erreur renvoyée par la fonction vérifiant la valeur de la variable de statut,\\[1\baselineskip]
-   		\item la valeur défectueuse enregistrée,\\[1\baselineskip]
-   		\item la liste des valeurs autorisées.\\[1\baselineskip]
+   		\item Le nom du fichier où s'est produite l'erreur, ainsi que la ligne, suivi de la description de l'erreur renvoyée par la fonction vérifiant la valeur de la variable de statut,\\
+
+   		\item la valeur défectueuse enregistrée,\\
+
+   		\item la liste des valeurs autorisées.
    	\end{itemize}
+\end{justify}
 
-   	\textbf{Paramètres :}
-   	\begin{itemize}
-        \item \color{orange}\textbf{\$p\_file\color{white} :} \color{white} fichier dans lequel cette fonction est appelée (de préférence avec la commande \textbf{\textbf{"\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")}}.\\[1\baselineskip]
+\begin{justify}
+    \textbf{Paramètres :}
 
-        \item \color{orange}\textbf{\$p\_lineno\color{white} :} \color{white} le numéro de ligne où cette fonction est appelée (de préférence avec la variable d'environnement \textbf{\color{orange}\$LINENO}).\\[1\baselineskip]
+    \begin{itemize}
+        \item \color{orange}\textbf{\$p\_file\color{white} :} \color{white} fichier dans lequel cette fonction est appelée (de préférence avec la commande \textbf{\textbf{"\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")}}.\\
 
-        \item \color{orange}\textbf{\$p\_badVal\color{white} :} \color{white}\\[1\baselineskip]
+        \item \color{orange}\textbf{\$p\_lineno\color{white} :} \color{white} le numéro de ligne où cette fonction est appelée (de préférence avec la variable d'environnement \textbf{\color{orange}\$LINENO}).\\
 
-        \item \color{orange}\textbf{\$p\_varVal\color{white} :} \color{white}\\[1\baselineskip]
-   	\end{itemize}
+        \item \color{orange}\textbf{\$p\_badVal\color{white} :} \color{white}\\
+
+        \item \color{orange}\textbf{\$p\_varVal\color{white} :} \color{white}\\
+    \end{itemize}
+\end{justify}
     
-   	\textbf{Variables :}
-   	\begin{itemize}
-        \item \color{orange}\textbf{\$v\_array\color{white} :} \color{white}\\[1\baselineskip]
-        \item \color{orange}\textbf{\$i\color{white} :} \color{white}\\[1\baselineskip]
-   	\end{itemize}
+\begin{justify}
+    \textbf{Variables :}
 
+    \begin{itemize}
+        \item \color{orange}\textbf{\$v\_array\color{white} :} \color{white}\\
+        \item \color{orange}\textbf{\$i\color{white} :} \color{white}
+    \end{itemize}
+\end{justify}
+
+\begin{justify}
     \textbf{Code :}
-\end{flushleft}
+    \begin{itemize}
+        \item 
+    \end{itemize}
+
+\end{justify}
 
 
+% -----------------------------------------------
 
 \color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{green}
 \subsection{Sous-section "CHECKINGS"}\color{white}
 
-Cette section contient toutes les fonctions vérifiant que la variable de statut associée possède une valeur valide.
+\begin{justify}
+    Cette section contient toutes les fonctions vérifiant que la variable de statut associée possède une valeur valide.
+\end{justify}
 
 \color{blue}
 \subsubsection{CheckSTAT\_DEBUG}\color{white}
 
-\begin{itemize}
-    \item \textbf{Description de la variable :}\\
-    Cette variable de statut sert à lancer un déboguage de certaines fonctionnalités (dans une section de code écrite de préférence au début du script principal), sans attendre l'atteinte à cette fonctionnalité si le code de cette dernière est écrit trop loin dans un script.\\[1\baselineskip]
-    
+\begin{justify}
+    \textbf{Description de la variable :}\\
+    Cette variable de statut sert à lancer un déboguage de certaines fonctionnalités (dans une section de code écrite de préférence au début du script principal), sans attendre l'atteinte à cette fonctionnalité si le code de cette dernière est écrit trop loin dans un script.
+\end{justify}
+
+\begin{justify}
     \textbf{Valeurs acceptées :}
+
     \begin{itemize}
-        \item \textbf{true} : Si une condition vérifie que la valeur de cette variable de statut est égale à cette valeur, alors les fonctionnalités à tester sont testées au début du script principal, avant d'interrompre l'exécution une fois les tests passés.\\[1\baselineskip]
+        \item \textbf{true} : Si une condition vérifie que la valeur de cette variable de statut est égale à cette valeur, alors les fonctionnalités à tester sont testées au début du script principal, avant d'interrompre l'exécution une fois les tests passés.\\
 
-        \item \textbf{false} : Le script ignore les éventuels tests de fonctionnalités.\\[1\baselineskip]
+        \item \textbf{false} : Le script ignore les éventuels tests de fonctionnalités.
     \end{itemize}
+\end{justify}
 
-    \item \textbf{Description de la fonction :}\\
-        Cette fonction vérifie que la valeur enregistrée dans la variable de statut \textbf{\color{orange}\$\_\_BU\_MAIN\_STAT\_DEBUG} soit bien égale à \textbf{true} ou \textbf{false}.\\[1\baselineskip]
+\begin{justify}
+    \textbf{Description de la fonction :}\\
+    Cette fonction vérifie que la valeur enregistrée dans la variable de statut \textbf{\color{orange}\$\_\_BU\_MAIN\_STAT\_DEBUG} soit bien égale à \textbf{true} ou \textbf{false}.\\[1\baselineskip]
+\end{justify}
 
-    \item \textbf{Paramètres :}
+\begin{justify}
+    \textbf{Paramètres :}
+
     \begin{itemize}
-        \item \color{orange}\textbf{\$p\_file}\color{white} : fichier dans lequel cette fonction est appelée (de préférence avec la commande \textbf{\textbf{"\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")}}\\[1\baselineskip]
+        \item \color{orange}\textbf{\$p\_file}\color{white} : fichier dans lequel cette fonction est appelée (de préférence avec la commande \textbf{\textbf{"\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")}}\\
 
-        \item \color{orange}\textbf{\$p\_lineno}\color{white} : le numéro de ligne où cette fonction est appelée (de préférence avec la variable d'environnement \textbf{\color{orange}\$LINENO})\\[1\baselineskip]
+        \item \color{orange}\textbf{\$p\_lineno}\color{white} : le numéro de ligne où cette fonction est appelée (de préférence avec la variable d'environnement \textbf{\color{orange}\$LINENO})\\
     \end{itemize}
+\end{justify}
 
-    \item \textbf{Variables :}
-    \begin{itemize}
-        \item \textbf{\color{orange}\$v\_array\color{white} :} \\[1\baselineskip]
-    \end{itemize}
-
-
-    \item \textbf{Code :}
+\textbf{Variables :}
+\begin{itemize}
+    \item \textbf{\color{orange}\$v\_array\color{white} :} \\[1\baselineskip]
 \end{itemize}
 
+
+\textbf{Code :}
+
+
+% -----------------------
 
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
 \subsubsection{CheckSTAT\_DECHO}\color{white}
 
+\textbf{Description de la variable :}
 \begin{itemize}
-    \item \textbf{Description de la variable :}
-    \begin{itemize}
-        \item Cette variable de statut sert à restreindre ou empêcher l'exécution de la fonction de décoration de texte avancée \textbf{\color{mauve}Decho}, dans les situations où l'appel de cette fonctions peut provoquer une boucle infinie.\\[1\baselineskip]
-    \end{itemize}
-
-
-    \item \textbf{Description de la fonction :}\\
-        Cette fonction vérifie que la valeur enregistrée dans la variable de statut\\
-        \textbf{\color{orange}\$\_\_BU\_MAIN\_STAT\_DECHO} corresponde aux chaînes de caractères suivantes :\\[1\baselineskip]
-        \begin{itemize}
-            \item \textbf{allow} : Cette valeur autorise tout formattage de texte, allant de la couleur au clignotement du texte, à la mise en gras ou en italique, à l'assombrissement, au soulignage, à la rayure ou au camouflage.\\[1\baselineskip]
-
-            \item \textbf{restrict} : Cette valeur restreint la décoration de texte à la couleur.\\[1\baselineskip]
-
-            \item \textbf{forbid} : Cette valeur interdit purement la décoration de texte et entoure simplement le texte à décorer de guillemets.\\[1\baselineskip]
-        \end{itemize}
-
-    \item \textbf{Paramètres :}
-    \begin{itemize}
-        \item \color{orange}\textbf{\$p\_file}\color{white} : fichier dans lequel cette fonction est appelée (de préférence avec la commande \textbf{"\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")}\\[1\baselineskip]
-
-        \item \color{orange}\textbf{\$p\_lineno}\color{white} : le numéro de ligne où cette fonction est appelée (de préférence avec la variable d'environnement \textbf{\color{orange}\$LINENO}))\\[1\baselineskip]
-    \end{itemize}
-
-    \item \textbf{Variables :}
-    \begin{itemize}
-        \item \textbf{\color{orange}\$v\_array\color{white} :}\\[1\baselineskip]
-    \end{itemize}
-
-
-    \item \textbf{Code :}
+    \item Cette variable de statut sert à restreindre ou empêcher l'exécution de la fonction de décoration de texte avancée \textbf{\color{mauve}Decho}, dans les situations où l'appel de cette fonctions peut provoquer une boucle infinie.\\[1\baselineskip]
 \end{itemize}
 
+
+\textbf{Description de la fonction :}\\
+Cette fonction vérifie que la valeur enregistrée dans la variable de statut \textbf{\color{orange}\$\_\_BU\_MAIN\_STAT\_DECHO} corresponde aux chaînes de caractères suivantes :\\[1\baselineskip]
+
+    \begin{itemize}
+        \item \textbf{allow} : Cette valeur autorise tout formattage de texte, allant de la couleur au clignotement du texte, à la mise en gras ou en italique, à l'assombrissement, au soulignage, à la rayure ou au camouflage.\\[1\baselineskip]
+
+        \item \textbf{restrict} : Cette valeur restreint la décoration de texte à la couleur.\\[1\baselineskip]
+
+        \item \textbf{forbid} : Cette valeur interdit purement la décoration de texte et entoure simplement le texte à décorer de guillemets.\\[1\baselineskip]
+    \end{itemize}
+
+\textbf{Paramètres :}
+\begin{itemize}
+    \item \color{orange}\textbf{\$p\_file}\color{white} : fichier dans lequel cette fonction est appelée (de préférence avec la commande \textbf{"\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")}\\[1\baselineskip]
+
+    \item \color{orange}\textbf{\$p\_lineno}\color{white} : le numéro de ligne où cette fonction est appelée (de préférence avec la variable d'environnement \textbf{\color{orange}\$LINENO}))\\[1\baselineskip]
+\end{itemize}
+
+\textbf{Variables :}
+\begin{itemize}
+    \item \textbf{\color{orange}\$v\_array\color{white} :}\\[1\baselineskip]
+\end{itemize}
+
+\textbf{Code :}
+
+
+% -----------------------
 
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
 \subsubsection{CheckSTAT\_ECHO}\color{white}
 
+\textbf{Description de la variable :}\\
+Cette variable de statut sert à empêcher l'exécution de la fonction \textbf{\color{mauve}CheckProjectLogStatus}, notamment dans le cas où une fonction d'affichage de texte formaté est appelée à l'intérieur de cette fonction, où via une autre fonction appelée dans le même cas.\\[1\baselineskip]
+
+\textbf{Description de la fonction :}\\
+Cette fonction vérifie que la valeur enregistrée dans la variable de statut \textbf{\color{orange}\$\_\_BU\_MAIN\_STAT\_ECHO} corresponde aux chaînes de caractères \textbf{true} ou \textbf{false}.\\[1\baselineskip]
+
+\textbf{Paramètres :}
 \begin{itemize}
-    \item \textbf{Description de la variable :}\\
-    Cette variable de statut sert à empêcher l'exécution de la fonction \textbf{\color{mauve}CheckProjectLogStatus}, notamment dans le cas où une fonction d'affichage de texte formaté est appelée à l'intérieur de cette fonction, où via une autre fonction appelée dans le même cas.\\[1\baselineskip]
+    \item \color{orange}\textbf{\$p\_file}\color{white} : fichier dans lequel cette fonction est appelée (de préférence avec la commande \textbf{"\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")}\\[1\baselineskip]
 
-    \item \textbf{Description de la fonction :}\\
-        Cette fonction vérifie que la valeur enregistrée dans la variable de statut \textbf{\color{orange}\$\_\_BU\_MAIN\_STAT\_ECHO} corresponde aux chaînes de caractères \textbf{true} ou \textbf{false}.\\[1\baselineskip]
+    \item \color{orange}\textbf{\$p\_lineno}\color{white} : le numéro de ligne où cette fonction est appelée (de préférence avec la variable d'environnement \textbf{\color{orange}\$LINENO}))\\[1\baselineskip]
+\end{itemize}
 
-    \item \textbf{Paramètres :}
-    \begin{itemize}
-        \item \color{orange}\textbf{\$p\_file}\color{white} : fichier dans lequel cette fonction est appelée (de préférence avec la commande \textbf{"\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")}\\[1\baselineskip]
-
-        \item \color{orange}\textbf{\$p\_lineno}\color{white} : le numéro de ligne où cette fonction est appelée (de préférence avec la variable d'environnement \textbf{\color{orange}\$LINENO}))\\[1\baselineskip]
-    \end{itemize}
-
-    \item \textbf{Variables :}
+    \textbf{Variables :}
     \begin{itemize}
         \item \textbf{\color{orange}\$v\_array\color{white} :}\\[1\baselineskip]
     \end{itemize}
 
 
-    \item \textbf{Code :}
-\end{itemize}
+    \textbf{Code :}
 
+
+% -----------------------
 
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
 \subsubsection{CheckSTAT\_ERROR}\color{white}
 
-\begin{itemize}
-    \item \textbf{Description de la variable :}\\
+\begin{justify}
+    \textbf{Description de la variable :}\\
     Cette variable de statut sert à déterminer la gravité d'une erreur selon le contexte. Ce choix est à déterminer par l'utilisateur, et cette variable est traitée par la fonction \textbf{\color{mauve}HandleErrors()} du fichier de librairie \textbf{\color{lime}Checkings.lib}.\\[1\baselineskip]
+\end{justify}
 
     \textbf{Valeurs acceptées :}
     \begin{itemize}
@@ -300,24 +354,25 @@ Cette section contient toutes les fonctions vérifiant que la variable de statut
         \item \textbf{fatal} : Le script interrompt son exécution sans demander l'avis de l'utilisateur, car l'erreur rencontrée est jugée trop importante pour que le script continue son exécution sans problèmes.\\[1\baselineskip]
     \end{itemize}
 
-    \item \textbf{Description de la fonction :}\\
+    \textbf{Description de la fonction :}\\
         Cette fonction vérifie que la valeur enregistrée dans la variable de statut \textbf{\color{orange}\$\_\_BU\_MAIN\_STAT\_ERROR} soit vide ou corresponde à la chaîne de caractères \textbf{fatal}.\\[1\baselineskip]
 
-    \item \textbf{Paramètres :}
+    \textbf{Paramètres :}
     \begin{itemize}
         \item \textbf{\color{orange}\$p\_file\color{white}:} fichier dans lequel cette fonction est appelée (de préférence avec la commande \textbf{\textbf{"\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")}}\\[1\baselineskip]
 
         \item \color{orange}\textbf{\$p\_lineno}\color{white} : le numéro de ligne où cette fonction est appelée (de préférence avec la variable d'environnement \textbf{\color{orange}\$LINENO})\\[1\baselineskip]
     \end{itemize}
 
-    \item \textbf{Variables :}
+    \textbf{Variables :}
     \begin{itemize}
         \item \textbf{\color{orange}\$v\_array\color{white} :}\\[1\baselineskip]
     \end{itemize}
 
-    \item \textbf{Code :}
-\end{itemize}
+    \textbf{Code :}
 
+
+% -----------------------
 
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
@@ -347,6 +402,8 @@ Cette section contient toutes les fonctions vérifiant que la variable de statut
     \item \textbf{Code :}
 \end{itemize}
 
+
+% -----------------------
 
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
@@ -380,6 +437,7 @@ Cette section contient toutes les fonctions vérifiant que la variable de statut
 \end{itemize}
 
 
+% -----------------------
 
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
@@ -409,6 +467,8 @@ Cette section contient toutes les fonctions vérifiant que la variable de statut
     \item \textbf{Code :}
 \end{itemize}
 
+
+% -----------------------
 
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
@@ -442,6 +502,8 @@ Cette section contient toutes les fonctions vérifiant que la variable de statut
 \end{itemize}
 
 
+% -----------------------
+
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
@@ -474,6 +536,7 @@ Cette section contient toutes les fonctions vérifiant que la variable de statut
 \end{itemize}
 
 
+% -----------------------
 
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
@@ -508,6 +571,8 @@ Cette section contient toutes les fonctions vérifiant que la variable de statut
 \end{itemize}
 
 
+% -----------------------
+
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
@@ -540,6 +605,8 @@ Cette section contient toutes les fonctions vérifiant que la variable de statut
 \end{itemize}
 
 
+% -----------------------
+
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
@@ -570,6 +637,8 @@ Cette section contient toutes les fonctions vérifiant que la variable de statut
     \item \textbf{Code :}
 \end{itemize}
 
+
+% -----------------------
 
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
@@ -605,6 +674,7 @@ Cette section contient toutes les fonctions vérifiant que la variable de statut
 \end{itemize}
 
 
+% -----------------------
 
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
@@ -632,9 +702,27 @@ Cette section contient toutes les fonctions vérifiant que la variable de statut
 
 
 
+% -----------------------
+
+% -----------------------------------------------
+
 \color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{green}
 \subsection{Sous-section "CHANGING VALUES MORE EASILY"}\color{white}
+
+\textbf{Note :} Cette sous-section contient des fonctions appelant l'une des fonctions de la sous-section précédente, pour réduire la charge de travail du développeur lorsqu'il souhaite modifier la valeur d'une variable de statut tout en assurant le fait qu'elle contienne une valeur correcte.\\[1\baselineskip]
+
+\color{blue}
+\subsubsection{ChangeSTAT\_DEBUG}\color{white}
+
+\textbf{Description de la fonction :}\\
+\begin{itemize}
+    \item Cette fonction\\[1\baselineskip]
+\end{itemize}
+
+    
+
+
 
 \end{document}
